# fashiongraph

./: .gitignore  NOVEL_IDEAS.md  README.md  REBUILD_PLAN.md  brand.md  conftest.py  gorpcore.md  pyproject.toml  requirements.txt
adapters/fashion_sft/: adapter_config.json
adapters/fashion_voice/: adapter_config.json
chroma_db/: chroma.sqlite3
data/: DATASETS.md  feed_test.txt  url_stats.txt  urls.txt
data/annotations/: trend_scores_template.csv
data/chroma/: chroma.sqlite3
data/kg/: fashion_kg.sqlite
data/training/: expert_pairs.jsonl
examples/: brand_answers.example.json
fg/: __init__.py  cli.py  config.py
fg/api/: __init__.py
fg/brain/: __init__.py  context_builder.py  memory.py  output_contract.py  router.py
fg/capabilities/: __init__.py  _prompts.py  base.py
fg/data/: __init__.py  clean.py  dataloader.py  ingest.py  schema.py  sources.py
fg/kg/: __init__.py  build.py  evaluate.py  extractor.py  fabrics.py  link_prediction.py  reasoning.py  schema.py  store.py
fg/llm/: __init__.py  api_backend.py  base.py  factory.py  ollama_backend.py
fg/models/: __init__.py  (+2 more)
notebooks/: colab_finetune_encoder.ipynb
scripts/: download_datasets.py
tests/: test_aesthetics.py  test_alignment_pairs.py  test_bootstrapper.py  test_brain.py  test_build_instruction_data.py  test_clean.py  test_config.py  test_fabric_texture.py  test_fabrics.py  test_fusion.py  test_kg.py  test_kg_linker.py  test_kg_reasoning.py  test_link_prediction.py  test_llm.py  test_look_review.py  test_models.py  test_movements.py  test_pair_sources.py  test_perception.py  test_runway.py  test_runway_eval.py  test_sources.py  test_train_alignment.py  test_trend_analysis.py  test_vision_index.py  test_vlm.py  test_vlm_extract.py
(+59 files in other folders)
