[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fashiongraph"
version = "0.1.0"
description = "FashionGraph — full-cycle AI fashion assistant (agent brain over a clean fashion knowledge core)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Andrii Kozlov" }]

# Core deps kept lean. Heavy/optional groups are under [project.optional-dependencies].
dependencies = [
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
# RAG / knowledge core (no GPU needed)
rag = [
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "langchain-text-splitters>=0.2.0",
]
# Vision + embeddings (inference on MPS/CPU)
vision = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "open-clip-torch>=2.24.0",
    "transformers>=4.40.0",
    "Pillow>=10.3.0",
]
# Temporal GNN (train on Colab/Kaggle)
gnn = [
    "torch>=2.2.0",
    "torch-geometric>=2.5.0",
]
# API / serving layer (later phases)
api = [
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "websockets>=12.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

# Note: the console command is `fgraph`, NOT `fg` — `fg` is a reserved shell
# builtin (job control) and would be shadowed by it.
[project.scripts]
fgraph = "fg.cli:main"

[tool.setuptools.packages.find]
include = ["fg*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
